-Final padding and background tweaks to stop some overlapping at very strange screen sizes.

--- a/styles/home.css
+++ b/styles/home.css
@@ -77,7 +77,7 @@ input, select, button {
     width: 100%;
     height: calc(100% - 50px);
     box-sizing: border-box;
-    padding: 10px;
+    padding-top: 10px;
     opacity: .8;
     background: #1e1f33 fixed;
     transition: all 0.4s;
@@ -101,9 +101,9 @@ input, select, button {
 }
 
 #profileHeader {
+    box-sizing: border-box;
     width: 100%;
-    height: 250px;
-    border-bottom: 1px solid white;
+    padding: 0 10px;
 }
 
 #profileStats {
@@ -116,6 +116,7 @@ input, select, button {
 
 #mostPlayedChamps {
     text-align: center;
+    border-bottom: 1px solid white;
 }
 
 .statHeader {
@@ -143,6 +144,7 @@ input, select, button {
 #matchList {
     width: 100%;
     background: #1e1f33;
+    padding: 0 10px;
     box-sizing: border-box;
     display: flex;
     justify-content: space-around;
@@ -311,7 +313,7 @@ input, select, button {
     #summonerContainer {
         width: 80%;
         height: 80%;
-        min-height: 745px;
+        min-height: 760px;
         border: 2px solid white;
         border-top: 0;
         border-radius: 0 0 20px 20px;
